[tool.poetry]
name = "repl_nix_Aram-snapshot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0.0"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
riotwatcher = "^3.2.3"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
